# arkruiter

./: Makefile  README.md  pyproject.toml
src/arkruiter/: __init__.py  logging.py  main.py  requests.py  types.py
src/arkruiter/game_data/: __init__.py  character_table.py  gacha_table.py
src/arkruiter/model/: character_table.py
src/arkruiter/recruitment/: __init__.py  evaluate.py  result.py
tests/model/: test_character_table.py  test_gacha_table.py
