[project]
name = "arkruiter"
version = "0.1.0"
description = "Arknights recruitment helper CLI."
authors = [
    {name = "Adam Cmiel", email = "acmiel1@gmail.com"},
]
dependencies = []
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "black~=23.7",
    "pyright~=1.1",
    "pytest~=7.4",
    "ruff~=0.0",
]

[project.scripts]
arkruiter = "arkruiter.main:main"


[tool.pyright]
typeCheckingMode = "strict"


[tool.ruff]
select = [
    "F",    # pyflakes
    "W",    # pycodestyle warning
    "E",    # pycodestyle error
    "I",    # isort
    "UP",   # pyupgrade
    "ANN",  # flake8-annotations
    "S",    # bandit
    "B",    # flake8-bugbear
    "A",    # flake8-builtins
    "C4",   # flake8-comprehensions
    "G",    # flake8-logging-format
    "INP",  # flake8-no-pep-420 (implicit namespace packages)
    "SLOT", # flake8-slots
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "ARG",  # flake8-unused-arguments
    "PTH",  # flake8-use-pathlib
    "ERA",  # eradicate (commented-out code)
    "PGH",  # pygrep-hooks
    "PL",   # pylint
    "RUF",  # ruff
]

[tool.ruff.isort]
required-imports = ["from __future__ import annotations"]
