[project]
name = "arkruiter"
version = "0.1.0"
description = "Arknights recruitment helper CLI."
authors = [
    {name = "Adam Cmiel", email = "acmiel1@gmail.com"},
]
dependencies = [
    "pydantic~=2.3",
    "requests~=2.31",
    "requests-cache~=1.1",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "black~=23.7",
    "pyright~=1.1",
    "pytest~=7.4",
    "ruff~=0.0",
]

[project.scripts]
arkruiter = "arkruiter.main:main"


[tool.pyright]
include = ["src"]
typeCheckingMode = "strict"


[tool.pytest.ini_options]
markers = [
    "network: tests that do network IO",
]


[tool.ruff]
src = ["src"]
select = [
    "F",    # pyflakes
    "W",    # pycodestyle warning
    "E",    # pycodestyle error
    "I",    # isort
    "UP",   # pyupgrade
    "ANN",  # flake8-annotations
    "S",    # bandit
    "B",    # flake8-bugbear
    "A",    # flake8-builtins
    "C4",   # flake8-comprehensions
    "G",    # flake8-logging-format
    "INP",  # flake8-no-pep-420 (implicit namespace packages)
    "SLOT", # flake8-slots
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "ARG",  # flake8-unused-arguments
    "PTH",  # flake8-use-pathlib
    "ERA",  # eradicate (commented-out code)
    "PGH",  # pygrep-hooks
    "PL",   # pylint
    "RUF",  # ruff
]
ignore = [
    "E501",    # line-too-long
    "ANN101",  # missing-type-self
    "ANN102",  # missing-type-cls
]

[tool.ruff.per-file-ignores]
"tests/*" = [
    "S101",     # assert
    "PLR2004",  # magic-value-comparison
]

[tool.ruff.isort]
required-imports = ["from __future__ import annotations"]
